; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-lpc18xx.c_lpc18xx_gpio_pin_ic_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-lpc18xx.c_lpc18xx_gpio_pin_ic_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lpc18xx_gpio_pin_ic = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lpc18xx_gpio_pin_ic*, i64, i64)* @lpc18xx_gpio_pin_ic_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lpc18xx_gpio_pin_ic_set(%struct.lpc18xx_gpio_pin_ic* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.lpc18xx_gpio_pin_ic*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.lpc18xx_gpio_pin_ic* %0, %struct.lpc18xx_gpio_pin_ic** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %5, align 8
  %8 = call i32 @BIT(i64 %7)
  %9 = load %struct.lpc18xx_gpio_pin_ic*, %struct.lpc18xx_gpio_pin_ic** %4, align 8
  %10 = getelementptr inbounds %struct.lpc18xx_gpio_pin_ic, %struct.lpc18xx_gpio_pin_ic* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* %6, align 8
  %13 = add nsw i64 %11, %12
  %14 = call i32 @writel_relaxed(i32 %8, i64 %13)
  ret void
}

declare dso_local i32 @writel_relaxed(i32, i64) #1

declare dso_local i32 @BIT(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
